# GearGirls.github.io

./: .gitignore  .gitmodules  Different Parts  DifferentParts.org  about.html  archive.html  circle.yml  contact.html  index.html
css/: stylish-portfolio.css
posts/: 2012-08-12-spqr.html  2012-10-07-rosa-rosa-rosam.html  2012-11-28-carpe-diem.html  2012-12-07-tu-quoque.html
site-builder/: index.html  site-builder.cabal  site.hs
site-builder/Hakyll/: Github.hs
site-builder/css/: stylish-portfolio.css
site-builder/org-docs/: documents.org  meeting-planner.org  tutorials.org  videos.org
site-builder/org-sections/: meeting-planner.org
site-builder/templates/: default.html  section.html
