name:               site-builder
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , blaze-html >= 0.8.1.0
                  , data-default >= 0.5.3
                  , github == 0.13.*
                  , hakyll == 4.7.*
                  , pandoc
                  , time >= 1.5.0.1
  ghc-options:      -threaded
  default-language: Haskell2010
