name:               site-builder
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base
                  , blaze-html
                  , data-default
                  , github
                  , hakyll >= 4.8.3.1
                  , pandoc
                  , text >= 1.2.2.1
                  , time >= 1.5.0.1
                  , vector >= 0.11.0.0
  ghc-options:      -threaded
  default-language: Haskell2010
